Make the French 'about the dock' page match the English

--- a/dimensions-fra.html
+++ b/dimensions-fra.html
@@ -105,6 +105,13 @@
 					de retenue en b&eacute;ton arm&eacute;. Le bassin est &eacute;clair&eacute; par
 					huit pyl&ocirc;nes munis de lampes au sodium haute pression ainsi que par
 					un syst&egrave;me d'&eacute;clairage au mercure standard. </p>
+				<img src="images/stabil.jpg" width="320" height="234" alt="Caisson de stabilisateur" style="float: right; padding-left: 15px;" />
+        <p>R&eacute;cemment, on a am&eacute;nag&eacute; des logements pour stabilisateurs
+					dans les parois de b&eacute;ton de la cale s&egrave;che afin de faciliter
+					l'inspection, l'entretien et la r&eacute;paration de ces dispositifs lors
+					de la mise en cale des navires.</p>
+        <br style="clear: both" />
+        <br />
 				<div class="option4">
 					<h2>Dimensions du bassin</h2>
 					<a href="dimensions2-fra.html"><img src="images/dimensions.gif" alt="Vue en plan, coupe longitudinale et dimensions de la cale sèche d'Esquimalt." width="450" height="282" /></a>
