--- a/services-fra.html
+++ b/services-fra.html
@@ -90,26 +90,68 @@
 					</h1>
 				<p>La Cale s&egrave;che d'Esquimalt est une entreprise dynamique de r&eacute;paration
 					navale desservant une client&egrave;le nationale et internationale et fonctionnant
-					24&nbsp;heures sur 24, 7&nbsp;jours sur 7&nbsp;et 365&nbsp;jours par ann&eacute;e. La <acronym title="Cale s&egrave;che d'Esquimalt">CSE</acronym> offre
-					une gamme compl&egrave;te de services et
-					d'&eacute;quipements de r&eacute;paration navale, notamment de nouveaux
-					logements de stabilisateurs.</p>
-				<p>Les paquebots de croisi&egrave;re sont &eacute;quip&eacute;s de stabilisateurs
-					situ&eacute;s au-dessous de la ligne de flottaison, dont le d&eacute;ploiement
-					assure une plus grande stabilit&eacute; du b&acirc;timent contre l'action
-					de roulis. Ces &eacute;l&eacute;ments au profil hydrodynamique n&eacute;cessitent
-					un entretien r&eacute;gulier et certaines r&eacute;parations p&eacute;riodiques.</p>
-				<p>R&eacute;cemment, on a am&eacute;nag&eacute; des logements pour stabilisateurs
-					dans les parois de b&eacute;ton de la cale s&egrave;che afin de faciliter
-					l'inspection, l'entretien et la r&eacute;paration de ces dispositifs lors
-					de la mise en cale des navires.</p>
-				<div id="stabil" style="text-align: center;"><img src="images/stabil.jpg" width="320" height="234" alt="Caisson de stabilisateur" /></div>
-				<ul>
-					<li><a href="ser/reparation-repair-fra.html">Services de r&eacute;paration
-							navale</a></li>
-					<li><a href="ser/pompes-pumps-fra.html">&Eacute;quipe des services techniques
-						&amp; Personnel de cale</a></li>
-				</ul>
+					24&nbsp;heures sur 24, 7&nbsp;jours sur 7&nbsp;et 365&nbsp;jours par ann&eacute;e.</p>
+
+         <h2>Pumphouse</h2>
+
+          <p>
+          The pumphouse staff is responsible for the fill and drain of the dock basin, electrical supply, compressed air, sewage and fresh water. For further information contact the pumphouse supervisor at 250-363-3768&nbsp;or the pumphouse floor at 250-363-3788.
+          </p>
+          <img src="images/pompe-pump.jpg" width="295" height="152" alt="Pumphouse" />
+
+          <h2>Electrical</h2>
+
+          <p>
+          For up to date electrical services please contact the electrical supervisor at 250-363-3991.
+          </p>
+
+          <h2>Yard</h2>
+
+          <p>
+          The yard staff provides a variety of services including keel block setting, assisting with the docking and undocking of vessels, maintaining the grounds and oil spill response.
+          </p>
+          <img src="images/personnel-staff.jpg" width="300" height="225" alt="Yard Staff building" />
+
+          <h2>Crane</h2>
+
+          <p>
+          Our clients are serviced by three heavy-lift electrically-driven, rail-mounted travelling cranes as well as a 7&nbsp;tonne Tower Crane on the South Jetty, and 3&nbsp;mobile cranes.
+          </p>
+
+          <p>Cranes at EGD:</p>
+
+          <img src="images/grue-crane.jpg" width="193" height="280" alt="Crane" style="float: right; padding-left: 10px;" />
+
+          <p>
+          <strong>Krupp 150&nbsp;tonne Level Luffing Crane (1982)</strong> - 150-tonne capacity at 35&nbsp;metres and a 100-tonne capacity at 50&nbsp;metres. This crane has a main hook capable of lifting entire vessels onto land for refit or repair and an auxiliary hook with a 15&nbsp;tonne capacity generally used to transport materials onto the vessel. This crane is situated on the North side of the Dock and is a valuable crane to serve our Clients needs for vessels berthed at the North Landing Wharf.
+          </p>
+
+          <p>
+          <strong>Ebco 30&nbsp;tonne Level Luffing Crane (1984)</strong> - This quick maneuvering crane travels the full length of the Dock and has a 30-tonne capacity at 35&nbsp;metres.
+          </p>
+
+          <p>
+          <strong>Konecrane 30&nbsp;tonne, Level Luffing Crane (2010)</strong> - The newest of our rail mounted cranes has a reach of 42&nbsp;metres. This crane travels the full length of the south side of the graving dock.
+          </p>
+
+          <p>
+          <strong>Pecco 7&nbsp;tonne Tower Crane</strong> is situated on the South Jetty of EGD and can service vessels berthed at the South Jetty.
+          </p>
+
+          <p>
+          In addition, the Esquimalt Graving Dock has three mobile cranes: A <strong>30-tonne Grove RT rubber tired crane</strong>, a <strong>25-tonne rubber tired mobile crane</strong> and a <strong>10-tonne Hyster Bullmoose</strong> that is ideal for dockbottom applications. 
+          </p>
+
+          <p>
+          We also have 4&nbsp;tonne and 6&nbsp;tonne forklifts available to our clients.
+          </p>
+
+          <h2>Risk Management</h2>
+
+          <p>
+          The Risk Management Group addresses issues concerning safety, fire, security and public relations. They also ensure that EGD maintains its Marine Facility Certification under the requirements of the Marine Transportation Security Regulations and International Ship &amp; Port Facility Security Code. This group works and coordinates mostly behind the scenes to help ensure that not only do EGD employees work in a safe and secure environment, but also employees of the companies that operate out of the EGD facility.  
+          </p>
+
 			</div>
 
 			<!-- FIN DU CONTENU | CONTENT ENDS -->
