Remove unncessesary <acronym> tags

--- a/env/gestion-management-eng.html
+++ b/env/gestion-management-eng.html
@@ -100,7 +100,7 @@
 					<p>All of those conducting business at the Esquimalt Graving Dock are expected
 						to operate in an environmentally responsible manner. This includes compliance
 						with all applicable environmental regulations and standards. In support
-            of this, the Esquimalt Graving Dock has developed a <a href="../files/ebmps-mpges.pdf">comprehensive set of Environmental Best Management Practices</a> (<acronym title="Environmental Best Management Practices">EBMPs</acronym>).</p>
+            of this, the Esquimalt Graving Dock has developed a <a href="../files/ebmps-mpges.pdf">comprehensive set of Environmental Best Management Practices</a> (EBMPs).</p>
 					<p><acronym title="Environmental Best Management Practices">EBMPs</acronym> are
 						ways of reducing and preventing the discharge of pollutants into the environment
 						through good housekeeping, maintenance, materials management, communications,
@@ -122,7 +122,7 @@
 						including health and safety, spill response, hazardous materials/waste
 						handling, environmental awareness, and other job specific requirements.</p>
 					<p><acronym title="Esquimalt Graving Dock">EGD</acronym> staff must also
-						be knowledgeable of the Environmental Best Management Practices (<acronym title="Environmental Best Management Practices">EBMPs</acronym>)
+						be knowledgeable of the Environmental Best Management Practices (EBMPs)
 						relating to their work.</p>
           <div class="topPage"> <a href="#tphp" title="Return to Top of Page"><img src="/clf20/images/tphp.gif" width="19" height="12" alt="" /><br />Top of Page</a> </div>
 				</div>
@@ -141,7 +141,7 @@
 					<h2 id="ee-ea">Environmental Assessments (EA)</h2>
 					<img src="../images/construct.jpg" title="Construction site" alt="Construction site" width="200" height="149" style="float:left; padding-right:10px; padding-bottom:10px;" />
 					<p>All new construction projects at the Esquimalt Graving Dock must be considered
-						for review under the Canadian Environmental Assessment Act (<acronym title="Canadian Environmental Assessment Act">CEAA</acronym>).
+						for review under the Canadian Environmental Assessment Act (CEAA).
 						If an assessment is required, an action plan is created to manage any potential
 						environmental impacts.</p>
           <div class="topPage"> <a href="#tphp" title="Return to Top of Page"><img src="/clf20/images/tphp.gif" width="19" height="12" alt="" /><br />Top of Page</a> </div>
