--- a/env/gestion-management-fra.html
+++ b/env/gestion-management-fra.html
@@ -98,8 +98,8 @@
 						de la r&eacute;glementation et des normes environnementales applicables. &Agrave; cetter
 						fin, la Cale s&egrave;che d'Esquimalt a &eacute;labor&eacute; une <a href="../files/ebmps-mpges.pdf">s&eacute;rie
               d&eacute;taill&eacute;e de meilleures pratiques de gestion de l'environnement
-              (<acronym title="meilleures pratiques de gestion de l'environnement">MPGE</acronym>)</a>.</p>
-					<p>Les meilleures pratiques de gestion de l'environnement (<acronym title="meilleures pratiques de gestion de l'environnement">MPGE</acronym>)
+              (MPGE)</a>.</p>
+					<p>Les meilleures pratiques de gestion de l'environnement (MPGE)
 						constituent un moyen de r&eacute;duire et de pr&eacute;venir le rejet de
 						polluants dans l'environnement gr&acirc;ce &agrave; de bonnes pratiques
 						d'entretien, de maintenance, de gestion du mat&eacute;riel, de communications
@@ -127,7 +127,7 @@
 						et sure d'autres exigences propres &agrave; leur poste.</p>
 					<p>Les employ&eacute;s de la <acronym title="cale s&egrave;che d'Esquimalt">CSE</acronym> doivent &eacute;galement
 						bien conna&icirc;tre les meilleures pratiques de gestion de l'environnement
-						(<acronym title="meilleures pratiques de gestion de l'environnement">MPGE</acronym>)
+						(MPGE)
 						se rapportant &agrave; leur travial.</p>
 					<div class="topPage"> <a href="#tphp" title="Retourner au haut de la page"><img src="/clf20/images/tphp.gif" width="19" height="12" alt="" /><br />
 						Haut de la page</a> </div>
@@ -151,7 +151,7 @@
 					<p>Tous les nouveaux projets de construction &agrave; la cale s&egrave;che
 						d'Esquimalt doivent &ecirc;tre &eacute;valu&eacute;s pour d&eacute;terminer
 						s'ils doivent faire l'objet d'un examen en vertu de la <i>Loi canadienne
-						sur l'&eacute;valuation environnementale</i> (<acronym title="Loi canadienne sur l'&eacute;valuation environnementale">LCEE</acronym>).
+						sur l'&eacute;valuation environnementale</i> (LCEE).
 						Lorsqu'une &eacute;valuation environnementale est n&eacute;cessaire, un
 						plan d'action est &eacute;labor&eacute; afin de g&eacute;rer toute r&eacute;percussion
 						que pourrait avoir un projet sur l'environnement.</p>
