Make French environmental policy page match English, update signature blocks

--- a/env/politique-policy-fra.html
+++ b/env/politique-policy-fra.html
@@ -90,18 +90,15 @@
 					Politique environnementale
 					<!-- CONTENT TITLE ENDS | FIN DU TITRE DU CONTENU -->
 				</h1>
-				<div style="float:right; text-align:right; width:218px;"><img src="../images/poli-haut-top-1.jpg" width="198" alt="cale s&egrave;che d'Esquimalt" height="276" style="padding-left:10px; padding-bottom:5px;" /><img src="../images/poli-haut-top-2.jpg" alt="cale s&egrave;che d'Esquimalt" width="198" height="123" style="padding-left:10px; padding-bottom:5px;" /><img src="../images/poli-haut-top-3.jpg" alt="Paquebot de croisi&egrave;re dans le bassin" width="198" height="122" style="padding-left:10px; padding-bottom:10px;" />				</div>
-				<div class="option2">
-					<p><strong>La cale s&egrave;che d'Esquimalt, en partenariat avec l'industrie de r&eacute;paration
-						de navires, veut &ecirc;tre le meilleur chantier naval de la
-						c&ocirc;te Ouest de l'Am&eacute;rique du Nord.</strong></p>
-					<p><strong>La Cale s&egrave;che d'Esquimalt et ses usagers sont conscients que l'atteinte
-						de cet objectif passe obligatoirement par la gestion
-						de l'environnement. La mise en &oelig;uvrue d'un syst&egrave;me de gestion de
-						l'environnement certifi&eacute; <acronym title="International Standards Organization">ISO</acronym> 14001&nbsp;traduit notre engagement &agrave; g&eacute;rer
-						les r&eacute;percussions que nos activit&eacute;s ont ou pourraient
-						avoir sur l'environnement. </strong></p>
-				</div>
+        <p>La cale s&egrave;che d'Esquimalt, en partenariat avec l'industrie de r&eacute;paration
+          de navires, veut &ecirc;tre le meilleur chantier naval de la
+          c&ocirc;te Ouest de l'Am&eacute;rique du Nord.</p>
+        <p>La Cale s&egrave;che d'Esquimalt et ses usagers sont conscients que l'atteinte
+          de cet objectif passe obligatoirement par la gestion
+          de l'environnement. La mise en &oelig;uvrue d'un syst&egrave;me de gestion de
+          l'environnement certifi&eacute; <acronym title="International Standards Organization">ISO</acronym> 14001&nbsp;traduit notre engagement &agrave; g&eacute;rer
+          les r&eacute;percussions que nos activit&eacute;s ont ou pourraient
+          avoir sur l'environnement. </p>
 				<p>Pour remplir notre engagement, nous allons&nbsp;:</p>
 				<ul>
 					<li>Prot&eacute;ger le milieu naturel et pr&eacute;venir la pollution.</li>
