Make French environmental program page match the English

--- a/env/programme-program-fra.html
+++ b/env/programme-program-fra.html
@@ -99,6 +99,9 @@
 				mis en &#339;uvre un syst&egrave;me de gestion de l'environnement (<acronym title="syst&egrave;me de gestion de l'environnement">SGE</acronym>)
 				qui a &eacute;t&eacute; certifi&eacute; conforme &agrave; la norme internationale <acronym title="Organisation internationale de normailisation">ISO</acronym> 14001
 				concerant les <acronym title="syst&egrave;me de gestion de l'environnement">SGE</acronym>.</p>
+
+      <h2 id="iso"><acronym title="Organisation internationale de normailisation">ISO</acronym> 14001</h2>
+
 			<p>Depuis sa certification en 2001, ce syst&egrave;me de gestion de l'environnement
 				a servi &agrave; encadrer la mise en &#339;uvre d'initiatives et de programmes
 				environnementaux fructueux et rentables. Ces programmes contribuent &agrave; garantir
@@ -113,7 +116,6 @@
 			<ul style="list-style-type:none; padding-left:0; margin-left:0; font-size:90%">
 				<li><a href="gestion-management-fra.html">Gestion de l'environnement</a>
 					<ul style="list-style-type:none">
-						<li><a href="gestion-management-fra.html#iso"><acronym title="Organisation internationale de normailisation">ISO</acronym> 14001</a></li>
 						<li><a href="gestion-management-fra.html#mpge-ebmp">Meilleures pratiques de
 								gestion de l'environnement</a></li>
 						<li><a href="gestion-management-fra.html#formation-training">Formation</a></li>
@@ -122,24 +124,15 @@
 						</li>
 					</ul>
 				</li>
-				<li><a href="initiatives-fra.html">Initiatives environnementales</a>
-					<ul style="list-style-type:none">
-						<li><a href="initiatives-fra.html#qa-aq">Qualit&eacute; de l'air</a></li>
-						<li><a href="initiatives-fra.html#eaux-water">Eaux us&eacute;es et eaux pluviales</a></li>
-						<li><a href="initiatives-fra.html#solide">R&eacute;duction des d&eacute;chets
-								solides</a></li>
-						<li><a href="initiatives-fra.html#danger-hazard">Mati&egrave;res dangereuses</a></li>
-						<li><a href="initiatives-fra.html#cons">R&eacute;duction de la consommation
-								d'eau et d'&eacute;nergie</a></li>
-						<li><a href="initiatives-fra.html#faune-wildlife">Protection de la faune</a></li>
-					</ul>
-				</li>
 				<li><a href="interet-interest-fra.html">Articles d'int&eacute;r&ecirc;t</a></li>
 			</ul>
 			<p>Si vous avez des questions ou des pr&eacute;occupations &agrave; l'&eacute;gard
 				de la Politique environnementale ou des programmes environnementaux de la
 				cale s&egrave;che d'Esquimalt, veuillez communiquer avec le coordonnateur
 				environnemental&nbsp;:</p>
+		  <p>
+				Courriel&nbsp;: <a href="mailto:melissa.piasta@pwgsc-tpsgc.gc.ca">melissa.piasta@pwgsc-tpsgc.gc.ca</a>
+		  </p>
 	
 		</div>
 
