--- a/his/1926-fra.html
+++ b/his/1926-fra.html
@@ -94,10 +94,10 @@
 					<img src="../images/historique_history/1926_2.jpg" alt="Le &laquo;&nbsp;S.S. Reginolite&nbsp;&raquo; en cale s&egrave;che" width="300" height="245" /> </div>
 				<p>Choisir une ann&eacute;e&nbsp;:</p>
 				<ul>
-					<li><a href="1921-fra.html">1921&nbsp;- 1923</a></li>
-					<li><a href="1925-fra.html">1925</a></li>
-					<li><a href="1926-fra.html">1926</a></li>
-					<li><a href="1927-fra.html">1927</a></li>
+					<li><a href="1921-fra.html">Historique 1921&nbsp;- 1923</a></li>
+					<li><a href="1925-fra.html">Historique 1925</a></li>
+					<li><a href="1926-fra.html">Historique 1926</a></li>
+					<li><a href="1927-fra.html">Historique 1927</a></li>
 				</ul>
 			</div>
 
