--- a/ser/pompes-pumps-eng.html
+++ b/ser/pompes-pumps-eng.html
@@ -135,9 +135,9 @@
 						Top of Page</a> </div>
 				<a name="elec" id="elec"></a>
 				<h2>Electrical</h2>
-				<p> Electrical services in the yard include 1500&nbsp;amp splitters, 480V, 400A
-					splitters and 120V duplex plug services as well as telephone and cable television
-					services. Emergency service is provided by a 475VA diesel powered generator
+				<p> Electrical services in the yard include 1500&nbsp;amp (Ampere) splitters, 480V (Volt), 400A (Ampere)
+					splitters and 120V (Volt) duplex plug services as well as telephone and cable television
+					services. Emergency service is provided by a 475VA (Volt-Ampere) diesel powered generator
 					set.</p>
 				<div class="topPage"> <a href="#tphp" title="Return to Top of Page"><img src="/clf20/images/tphp.gif" width="19" height="12" alt="" /><br />
 						Top of Page</a> </div>
