--- a/site-fra.html
+++ b/site-fra.html
@@ -117,12 +117,11 @@
 					<li><a href="historique-history-fra.html">Historique</a>
 
 						<ul>
-							<li> <a href="his/1921-fra.html">1921&nbsp;- 1923</a></li>
-							<li> <a href="his/1925-fra.html">1925</a></li>
-							<li> <a href="his/1926-fra.html">1926</a></li>
-							<li> <a href="his/1927-fra.html">1927</a></li>
+							<li> <a href="his/1921-fra.html">Historique 1921&nbsp;- 1923</a></li>
+							<li> <a href="his/1925-fra.html">Historique 1925</a></li>
+							<li> <a href="his/1926-fra.html">Historique 1926</a></li>
+							<li> <a href="his/1927-fra.html">Historique 1927</a></li>
 							<li> <a href="his/article-fra.html">Article QE II</a></li>
-							<li> <a href="his/ensemble-fra.html">Article d'<em>Ensemble</em></a></li>
 						</ul>
 					</li>
 
