--- a/his/1925-eng.html
+++ b/his/1925-eng.html
@@ -98,10 +98,10 @@
 					<img src="../images/historique_history/1925_2.jpg" alt="Pumphouse construction" width="300" height="245" /> </div>
 				<p>Select a year:</p>
 				<ul>
-					<li><a href="1921-eng.html">1921 - 1923</a></li>
-					<li><a href="1925-eng.html">1925</a></li>
-					<li><a href="1926-eng.html">1926</a></li>
-					<li><a href="1927-eng.html">1927</a></li>
+					<li><a href="1921-eng.html">History 1921 - 1923</a></li>
+					<li><a href="1925-eng.html">History 1925</a></li>
+					<li><a href="1926-eng.html">History 1926</a></li>
+					<li><a href="1927-eng.html">History 1927</a></li>
 				</ul>
 			</div>
 
