--- a/his/1927-eng.html
+++ b/his/1927-eng.html
@@ -99,10 +99,10 @@
 					<img src="../images/historique_history/1927_2.jpg" alt="Passenger ships in the drydock" width="300" height="242" /> </div>
 				<p>Select a year:</p>
 				<ul>
-					<li><a href="1921-eng.html">1921&nbsp;- 1923</a></li>
-					<li><a href="1925-eng.html">1925</a></li>
-					<li><a href="1926-eng.html">1926</a></li>
-					<li><a href="1927-eng.html">1927</a></li>
+					<li><a href="1921-eng.html">History 1921&nbsp;- 1923</a></li>
+					<li><a href="1925-eng.html">History 1925</a></li>
+					<li><a href="1926-eng.html">History 1926</a></li>
+					<li><a href="1927-eng.html">History 1927</a></li>
 				</ul>
 			</div>
 
