--- a/historique-history-fra.html
+++ b/historique-history-fra.html
@@ -117,10 +117,10 @@
 				<h2> Photos</h2>
 				<p>Choisir une ann&eacute;e&nbsp;:</p>
 				<ul>
-					<li><a href="his/1921-fra.html">1921&nbsp;- 1923</a></li>
-					<li><a href="his/1925-fra.html">1925</a></li>
-					<li><a href="his/1926-fra.html">1926</a></li>
-					<li><a href="his/1927-fra.html">1927</a></li>
+					<li><a href="his/1921-fra.html">Historique 1921&nbsp;- 1923</a></li>
+					<li><a href="his/1925-fra.html">Historique 1925</a></li>
+					<li><a href="his/1926-fra.html">Historique 1926</a></li>
+					<li><a href="his/1927-fra.html">Historique 1927</a></li>
 				</ul>
 			</div>
 
