--- a/index-fra.html
+++ b/index-fra.html
@@ -91,27 +91,17 @@
 			<!-- CONTENT BEGINS | DEBUT DU CONTENU -->
 
 			<div class="center">
+				<h1 id="cont">
+					<!-- CONTENT TITLE BEGINS | DEBUT DU TITRE DU CONTENU -->
+					Cale s&egrave;che d'Esquimalt - Bienvenue
+					<!-- CONTENT TITLE ENDS | FIN DU TITRE DU CONTENU -->
+				</h1>
 				<div class="main1"><img src="images/dock-cale.jpg" title="Cale s&egrave;che d'Esquimalt vue est" alt="Cale s&egrave;che d'Esquimalt vue est" width="388" height="250" style="width: 388px; height: 250px;" />
-					<h1 id="cont">
-						<!-- CONTENT TITLE BEGINS | DEBUT DU TITRE DU CONTENU -->
-						Cale s&egrave;che d'Esquimalt - Bienvenue
-						<!-- CONTENT TITLE ENDS | FIN DU TITRE DU CONTENU -->
-						</h1>
-					<p>La Cale s&egrave;che d'Esquimalt (CSE) est la plus importante forme de
-						radoub commerciale de la c&ocirc;te Ouest des Am&eacute;riques. Nous sommes <a href="emp-loc-fra.html">situ&eacute;s</a> dans
-						un port ouvert &agrave; l'ann&eacute;e longue, sur l'&icirc;le de Vancouver, &agrave; proximit&eacute; des
-						voies d'acc&egrave;s
-						&agrave; l'Alaska et aux pays riverains du Pacifique. </p>
-					<p>Nos installations de calibre mondial sont &eacute;quip&eacute;es notamment
-						de logements pour stabilisateurs et d'appareils
-						de levage haute vitesse pour charges lourdes (capacit&eacute; de 150-165
-						tonnes). La cale s&egrave;che peut recevoir des navires de 100&nbsp;000
-						TPL, soit environ 90&nbsp;% des navires du monde.</p>
-					<p>La <acronym title="Cale s&egrave;che d'Esquimalt">CSE</acronym> <a href="https://cse-egd.tpsgc-pwgsc.gc.ca/reserve-book-fra.cfm">offre
-							des services de r&eacute;paration et d'entretien naval aux entreprises
-							commerciales et aux particuliers</a>, sur commande (premier arriv&eacute;,
-							premier servi). Tout le travail est assur&eacute; par des <a href="entreprises-firms-fra.html">entreprises
-							de r&eacute;paration navale</a> du secteur priv&eacute;.</p>
+					
+					<p>La Cale s&egrave;che d'Esquimalt (CSE) est la plus importante forme de radoub commerciale de la c&ocirc;te Ouest des Am&eacute;riques. Nous sommes <a href="emp-loc-fra.html">situ&eacute;s</a> dans un port ouvert &agrave; l'ann&eacute;e longue, sur l'&icirc;le de Vancouver, &agrave; proximit&eacute; des voies d'acc&egrave;s
+&agrave; l'Alaska et aux pays riverains du Pacifique. </p>
+					<p>Nos installations de calibre mondial sont &eacute;quip&eacute;es notamment de logements pour stabilisateurs et d'appareils de levage haute vitesse pour charges lourdes (capacit&eacute; de 150-165 tonnes). La cale s&egrave;che peut recevoir des navires de 100&nbsp;000 TPL, soit environ 90&nbsp;% des navires du monde.</p>
+					<p>La <acronym title="Cale s&egrave;che d'Esquimalt">CSE</acronym> <a href="https://cse-egd.tpsgc-pwgsc.gc.ca/reserve-book-fra.cfm">offre des services de r&eacute;paration et d'entretien naval aux entreprises commerciales et aux particuliers</a>, sur commande (premier arriv&eacute;, premier servi). Tout le travail est assur&eacute; par des <a href="entreprises-firms-fra.html">entreprises de r&eacute;paration navale</a> du secteur priv&eacute;.</p>
 				</div>
 				<div class="option2">
 					<h2>Qui sommes-nous?</h2>
