--- a/site-eng.html
+++ b/site-eng.html
@@ -117,10 +117,10 @@
 					<li><a href="historique-history-eng.html">History</a>
 
 						<ul>
-							<li> <a href="his/1921-eng.html">1921&nbsp;- 1923</a></li>
-							<li> <a href="his/1925-eng.html">1925</a></li>
-							<li> <a href="his/1926-eng.html">1926</a></li>
-							<li> <a href="his/1927-eng.html">1927</a></li>
+							<li> <a href="his/1921-eng.html">History 1921&nbsp;- 1923</a></li>
+							<li> <a href="his/1925-eng.html">History 1925</a></li>
+							<li> <a href="his/1926-eng.html">History 1926</a></li>
+							<li> <a href="his/1927-eng.html">History 1927</a></li>
 							<li> <a href="his/article-eng.html">QE II Article</a></li>
 						</ul>
 					</li>
